@@ -1,3 +1,10 @@
+2002-08-26  Vino Crescini  <jcrescin@cit.uws.edu.au>
+
+	* ident/identlist.c :
+
+	  - More cleanups. Declare them as ident_type instead of ident_type *
+	    to avoid memory allocation/dealocation.
+
 2002-08-25  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* parser/parser.y :
